--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -206,7 +206,7 @@
 
 
 	<!-- Fact section -->
-	<section class="fact-section">
+	<section class="fact-section gradient-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-3">
