Change Header Logo

--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -37,7 +37,7 @@
 	<header class="header-section clearfix">
 		<div class="container-fluid">
 			<a href="index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
+				<img src="img/SmallPBE.png" alt="">
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
