--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -69,7 +69,7 @@
 					</form>
 				</div>
 				<div class="col-md-6">
-					<img src="img/laptop.png" class="laptop-image" alt="">
+					<img src="img/PBELogo.png" class="laptop-image" alt="">
 				</div>
 			</div>
 		</div>
