--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -82,8 +82,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 offset-lg-6 about-text">
-					<h2>What is Bitcoin</h2>
-					<h5>Bitcoin is an innovative payment network and a new kind of money.</h5>
+					<h2>What is PBE</h2>
+					<h5>The Professional Brotherhood of Engineers seeks to build leaders out of Texas A&M engineering students.</h5>
 					<p>Bitcoin is one of the most important inventions in all of human history. For the first time ever, anyone can send or receive any amount of money with anyone else, anywhere on the planet, conveniently and without restriction. It’s the dawn of a better, more free world.</p>
 					<a href="" class="site-btn sb-gradients sbg-line mt-5">Get Started</a>
 				</div>
