About Us FULL UPDATE

--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -82,9 +82,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 offset-lg-6 about-text">
-					<h2>What is PBE</h2>
+					<h2>What is PBE?</h2>
 					<h5>The Professional Brotherhood of Engineers seeks to build leaders out of Texas A&M engineering students.</h5>
-					<p>Bitcoin is one of the most important inventions in all of human history. For the first time ever, anyone can send or receive any amount of money with anyone else, anywhere on the planet, conveniently and without restriction. It’s the dawn of a better, more free world.</p>
+					<p>The purpose of PBE is to create a brotherhood of engineers that thrive socially, academically, and professionally. PBE will develop engineers networking, social events, and entrepreneurship to become better leaders.</p>
 					<a href="" class="site-btn sb-gradients sbg-line mt-5">Get Started</a>
 				</div>
 			</div>
