New welcome message

--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 hero-text">
-					<h2>Invest in <span>Bitcoin</span> <br>Bitcoin Trading</h2>
+					<h2>Join <br>PBE Today!</h2>
 					<h4>Use modern progressive technologies of Bitcoin to earn money</h4>
 					<form class="hero-subscribe-from">
 						<input type="text" placeholder="Enter your email">
