Welcome message + short info

--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -62,7 +62,7 @@
 			<div class="row">
 				<div class="col-md-6 hero-text">
 					<h2>Join <br>PBE Today!</h2>
-					<h4>Use modern progressive technologies of Bitcoin to earn money</h4>
+					<h4>We are a Texas A&M Men's Organization</h4>
 					<form class="hero-subscribe-from">
 						<input type="text" placeholder="Enter your email">
 						<button class="site-btn sb-gradients">Get Started</button>
