--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script>
+    		setTimeout(function(){location.href="http://pbetamu.org"} , 3000);
+	</script>
 	<title>Cryptocurrency - Landing Page Template</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cryptocurrency Landing Page Template">
